security: Add .gitignore patterns for confidential internal documents
- Add pattern for INTERNAL_*.md files
- Add pattern for STRATEGY_*.md files
- Add pattern for ROADMAP_*.md files
- Add pattern for *_CONFIDENTIAL.md files
- Add pattern for .internal/ and docs/internal/ directories

Ensures confidential business strategy documents never leak to GitHub.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ next-env.d.ts
 
 # code review and documentation (internal only)
 _reviews/
+
+# 🔐 CONFIDENTIAL - Internal strategic documents (DO NOT COMMIT TO GIT)
+INTERNAL_*.md
+STRATEGY_*.md
+ROADMAP_*.md
+*_INTERNAL.md
+*_CONFIDENTIAL.md
+.internal/
+docs/internal/
